# climage

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  makefile
.dvc/: config
.github/workflows/: build_and_push.yaml  lint_and_test_python.yml
data/: bmp.dvc
frontend/: index.html
python/: README.md  main.py  pyproject.toml
python/src/imadj/: bmp.py  cli.py  core.py  helpers.py  server.py
python/tests/: conftest.py  test_api.py  test_bmp.py  test_cli.py  test_helpers.py
terraform/dev/: main.tf  outputs.tf  variables.tf
